[project]
name = "podcast"
version = "0.1.0"
description = "A Python package for downloading podcast episodes"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "python-vlc>=3.0.21203",
]
requires-python = ">=3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast"]

[project.scripts]
podcast = "podcast.__main__:main"
